tests/snapshots/snapshot__parse_errors@wrong_comment.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/parse_errors/wrong_comment.roto
---
Error: Parse error: expected a function, filter, filtermap or import but got '#'
   ╭─[ tests/scripts/parse_errors/wrong_comment.roto:1:1 ]
   │
 1 │ # This is not a comment!
   │ ┬  
   │ ╰── expected a function, filter, filtermap or import
   │ 
   │ Help: `Use `//` for comments instead of `#`
───╯
